user-initiated finds against the config servers can fail with "need to swap catalog manager" error

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding B (10/30/15), Sharding C (11/20/15), Sharding D (12/11/15), Sharding E (01/08/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      User-initiated finds on the "config" or "admin" dbs may fail with "need to swap catalog manager".

      We need to either make the find and getmore commands run by the new find command code run through the catalog manager (which may be quite difficult), or just accept this state and require users to retry their queries in these cases.

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Spencer Brody (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: