SERVER-20694 Do not require w:majority on writes to config replica sets in SCCC mode.